--- a/app.css
+++ b/app.css
@@ -91,7 +91,7 @@ html {
     box-sizing: inherit;
 }
 *{
-	font-family: 'iransans', 'roboto';
+	font-family: 'iransans';
 	direction: rtl;
 	text-decoration: none;
 	list-style-type: none;
